tests/fixtures/invalid/int_mul_dict.py
# Cannot multiply Int and Dict[str, int]
x: int = 1 * {"a": 1}
